--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/prettier": "^2.2.3",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@types/react-resizable": "1.7.2",
     "axios": "^0.21.1",
     "bulmaswatch": "^0.8.1",
     "esbuild-wasm": "0.8.27",
@@ -20,9 +21,11 @@
     "localforage": "^1.9.0",
     "monaco-editor": "^0.24.0",
     "monaco-jsx-highlighter": "0.0.15",
+    "monaco-themes": "^0.3.3",
     "prettier": "^2.3.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-resizable": "1.11.0",
     "react-scripts": "4.0.3",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
