--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "@types/prettier": "^2.2.3",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@types/react-redux": "^7.1.16",
     "@types/react-resizable": "1.7.2",
     "@uiw/react-md-editor": "2.1.1",
     "axios": "^0.21.1",
     "bulmaswatch": "^0.8.1",
     "esbuild-wasm": "0.8.27",
+    "immer": "^9.0.2",
     "jscodeshift": "0.11.0",
     "localforage": "^1.9.0",
     "monaco-editor": "^0.24.0",
@@ -26,8 +28,11 @@
     "prettier": "^2.3.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.4",
     "react-resizable": "1.11.0",
     "react-scripts": "4.0.3",
+    "redux": "^4.1.0",
+    "redux-thunk": "^2.3.0",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
   },
